# idpt-italia

./: .gitignore  README.md  REPORT.md  index.html  requirements.txt
data/: inps_pensioni_decorrenza_pubblici_tutte_categorie_2026_v1.csv  inps_pensioni_per_anno_di_decorrenza_dipendenti_pubblici_anzianità_2026_v1.csv  (+9 more)
macrorefine/: .gitignore  README.md  codebase_completa.txt  pyproject.toml
macrorefine/examples/: 01_quickstart.py  02_custom_step.py  03_recipe.py  05_column_step.py  06_types_and_dates.py  07_enrich_municipality_id.py
macrorefine/examples/data/: province.csv  rifiuti.csv
macrorefine/examples/output/: rifiuti_arricchito.csv  rifiuti_arricchito.history.json
macrorefine/src/macrorefine/: __init__.py  column_step.py  dataset.py  history.py  io.py  pipeline.py  profiling.py  recipe.py  step.py
macrorefine/src/macrorefine/steps/: __init__.py  columns.py  join.py  missing.py  rows.py  text.py  types.py
macrorefine/src/macrorefine/steps/lod/: __init__.py  aggregate.py  emit.py  enrich.py  estimate.py  link.py  parse.py  project.py
macrorefine/tests/: conftest.py  test_column_step.py  test_dataset.py  test_history.py  test_io.py  test_lod_aggregate_mef.py  test_lod_aggregate_sardinia.py  test_lod_emit_qb_observations.py  test_lod_estimate_annual_amount.py  test_lod_link_agid_to_dbpedia.py  test_lod_link_province_by_name.py  test_lod_link_province_by_nuts.py  test_lod_link_province_by_sigla.py  test_lod_link_sede_inps.py  test_lod_parse_italian_numbers.py  test_lod_project_gdp.py  test_pipeline.py  test_profiling.py  test_recipe.py  test_steps.py
(+62 files in other folders)
