[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macrorefine"
version = "0.1.0"
description = "A simple, modular and extensible data cleaning pipeline library."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/macrorefine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]